2006-12-28  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpunitmenu.c: use the toplevel widget as the
	dialog's parent.

2006-12-28  Sven Neumann  <sven@gimp.org>

	* print-draw-page.c: fill rectangles instead of masking the spans.

2006-12-28  Seth Burgess  <sjburges@gimp.org>
	
	* app/widgets/gimpdasheditor.h
	* app/widgets/gimphistogramview.h: fixed improper _GET_CLASS macros

2006-12-28  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-page-layout.c: limit the image size to the
	printable area.

	* plug-ins/print/print-draw-page.c: commented out unused code.

2006-12-28  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpsizeentry.c: comment.

2006-12-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-page-layout.c
	* plug-ins/print/print.h: Clarified labels. Removed unused caption
	user interface.  Commented out the UI for the info header; it will
	eventually come back.

2006-12-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-draw-page.c: paint the background in white.
	Show progress, use a tile cache.

	* plug-ins/print/print.c: removed broken custom preview
	implementation.

2006-12-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-draw-page.c: draw in spans of tile height.

2006-12-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-page-layout.c
	* plug-ins/print/print.[ch]: don't set the resolution and unit on
	the image, only initialize the dialog with these values.

2006-12-27  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpimagemaptool.c (gimp_image_map_tool_load_save):
	show a message in the statusbar when settings are saved.

2006-12-26  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/tileit.c: corrected label (bug #389779).

2006-12-26  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print: minor cleanups.

	* plug-ins/print/print-page-layout.c: cleanup up GUI code.

	* plug-ins/print/print-settings.c (check_version): check keyfile
	before accessing it. Cleaned up error handling.
