@@ -1,5 +1,13 @@
 2006-12-28  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/print/print-settings: removed unused settings, bumped
+	format version. Store resolution and unit in the image parasite.
+
+	* plug-ins/print/print-page-layout.c: deal gracefully with no
+	default page setup.
+
+2006-12-28  Sven Neumann  <sven@gimp.org>
+
 	* libgimpwidgets/gimpunitmenu.c: use the toplevel widget as the
 	dialog's parent.
 
